# ft_irc

./: .gitignore  CMakeLists.txt  Makefile  README.md  ]  ps(1)
conf/: ircserv.motd
docs/: Untitled Diagram.drawio
includes/: channel.h  channel_event.h  check.h  command.h  data_base.h  database.h  delete_event_listener.h  end_event_listener.h  error_status.h  event.h  event_configurator.h  event_handler.h  event_listener.h  finishable.h  irc_server.h  message.h  message_parser.h  mode.h  optional_message.h  prepare_event_listener.h  response_status.h  server.h  start_event_listener.h  user.h  utils.h
src/: channel.cpp  channel_event.cpp  check.cpp  command.cpp  data_base.cpp  database.cpp  delete_event_listener.cpp  end_event_listener.cpp  error_status.cpp  event.cpp  event_configurator.cpp  event_handler.cpp  event_listener.cpp  finishable.cpp  irc_server.cpp  main.cpp  message.cpp  message_parser.cpp  mode.cpp  optional_message.cpp  prepare_event_listener.cpp  response_status.cpp  server.cpp  start_event_listener.cpp  test  user.cpp  utils.cpp
test/: MessageErrorTest.cpp  MessageTest.cpp  hello_test.cc
